Changelog for gtsAPI.
1.0.9-beta
==============
- select.
- readonly.
- PVTabs.
- уборка.
- Исправление getService.
- Исправление autocomplete.
- row_setting.
- Стили pvtables.
- filters в топе.
- autocomplet parent.

1.0.7-beta
==============
- Исправление автокомплект.
- Сниппет PVTable.
- CORS. Потом сделать настройки.
- LeftJoin.
- Генерация полей.
- Импорт экспорт.


1.0.0-beta
==============
- New build script.
- debug_mode.
- addExtensionPackage.
- decodeJSON.
- Продолжаю делать таблицы.
- Ошибка с санацией запросов модексом.
- Расширенный фильтр.
- Приведение дефаулт контролера к табле.
- Выгрузка полей и options.
- FractionDigits.
- multiSortMeta.
- Обновления фильтры.
- Версия gtsAPITable.
- api autocomplete.
- autocomplete tpl.
- обновил версию vue.